k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixelland-ws-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pixelland-address
    networking.gke.io/managed-certificates: managed-cert
spec:
  rules:
    - host: api.pixel.land
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pixelland-ws
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixelland-chat-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pixelchat-address
    networking.gke.io/managed-certificates: chat-managed-cert
spec:
  rules:
    - host: chat.pixel.land
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixelland-chat
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixelland-worlds-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: worlds-address
    networking.gke.io/managed-certificates: worlds-managed-cert
spec:
  rules:
    - host: worlds.pixel.land
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixelland-worlds
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixelland-images-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: images-address
    networking.gke.io/managed-certificates: images-managed-cert
spec:
  rules:
    - host: images.pixel.land
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixelland-images
                port:
                  number: 80
